--- a/ui/index.html
+++ b/ui/index.html
@@ -1,48 +1,23 @@
 <!doctype html>
-<html lang="en-US">
+<html>
 <head>
   <title>Evac guide</title>
 
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta http-equiv="Content-Type" content="text/html">
 
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="css/base.css" type="text/css" media="all" />
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/base.css" />
 
   <link rel="stylesheet" href="leaflet/leaflet.css" />
   <script src="leaflet/leaflet.js"></script>
 
-  <script>
-    function init() {
-      //地図を表示するdiv要素のidを設定
-      var map = L.map('mapcontainer');
-      //地図の中心とズームレベルを指定
-      map.setView([35.40, 136], 5);
-      //表示するタイルレイヤのURLとAttributionコントロールの記述を設定して、地図に追加する
-      L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png', {
-          attribution: "<a href='https://maps.gsi.go.jp/development/ichiran.html' target='_blank'>地理院タイル</a>"
-      }).addTo(map);
-    }
-  </script>
-
-
-
-  <!-- <script type="text/javascript" src="js/eval.js"></script> -->
+  <script type="text/javascript" src="js/map.js"></script>
 </head>
 
-<body onload="init()">
-  <div class="container">
-
-    <h1>Map</h1>
-
-    <div id="mapcontainer" style="width:800px;height:600px"></div>
-
-    
-
-  </div><!-- /container -->
+<body>
+  <h1>Map</h1>
+  <div id="map"></div>
 
 </body>
 </html>
