auto resize based on window size

--- a/ui/index.html
+++ b/ui/index.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="maparea">
+  <div class="container-lg">
+    <div id="maparea">
 
-      <h1>Map</h1>
+      <!-- <h1>Map</h1> -->
 
       <!-- 全画面表示 -->
       <!-- <div id="map" style="position:absolute;top:0;left:0;right:0;bottom:0;"></div> -->
@@ -33,13 +33,10 @@
 
     <div class="controller">
 
-<ul class="list-group">
-  <li class="list-group-item">An item</li>
-  <li class="list-group-item">A second item</li>
-  <li class="list-group-item">A third item</li>
-  <li class="list-group-item">A fourth item</li>
-  <li class="list-group-item">And a fifth one</li>
-</ul>
+      <div id="crossinfo"></div>
+
+      <button type="button" class="btn btn-primary">Auto update (stopped)</button>
+      <button type="button" class="btn btn-primary">Get coordinates</button>
 
       <div id="monitor"></div>
 
