--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="leaflet/leaflet.css" />
   <script src="leaflet/leaflet.js"></script>
 
+  <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/map.js"></script>
 </head>
 
@@ -35,10 +36,11 @@
 
       <div id="crossinfo"></div>
 
-      <button type="button" class="btn btn-primary">Auto update (stopped)</button>
-      <button type="button" class="btn btn-primary">Get coordinates</button>
+      <button id="manual_update" type="button" class="btn btn-primary">Manual update</button>
+      <button id="get_coordinates" type="button" class="btn btn-primary">Get coordinates</button>
+      <button id="auto_update" type="button" class="btn btn-secondary">Auto update (stopped)</button>
 
-      <div id="monitor"></div>
+      <div id="monitor">Monitor</div>
 
 
     </div><!-- /controller -->
