enable auto load

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,11 +37,12 @@
       <div id="crossinfo"></div>
 
       <button id="manual_update" type="button" class="btn btn-primary">Manual update</button>
-      <button id="get_coordinates" type="button" class="btn btn-primary">Get coordinates</button>
+      <!-- <button id="get_coordinates" type="button" class="btn btn-primary">Get coordinates</button> -->
       <button id="auto_update" type="button" class="btn btn-secondary">Auto update (stopped)</button>
 
       <div id="monitor">Monitor</div>
 
+      <p id="result"></p>
 
     </div><!-- /controller -->
 
