don't put existing marker.

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,7 +37,7 @@
       <div id="crossinfo"></div>
 
       <button id="manual_update" type="button" class="btn btn-primary">Manual update</button>
-      <!-- <button id="get_coordinates" type="button" class="btn btn-primary">Get coordinates</button> -->
+      <button id="clear_marker" type="button" class="btn btn-primary">Clear Marker</button>
       <button id="auto_update" type="button" class="btn btn-secondary">Auto update (stopped)</button>
 
       <div id="monitor">Monitor</div>
