add route selection

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,12 +33,17 @@
 
 
     <div class="controller">
+      <div class="button-container">
+	<button id="route1" type="button" class="btn btn-secondary">route1</button>
+	<button id="route2" type="button" class="btn btn-secondary">route2</button>
+	<button id="send_route" type="button" class="btn btn-primary">send route</button>
+      </div>
 
-      <div id="crossinfo"></div>
-
-      <button id="manual_update" type="button" class="btn btn-primary">Manual update</button>
-      <button id="clear_marker" type="button" class="btn btn-primary">Clear Marker</button>
-      <button id="auto_update" type="button" class="btn btn-secondary">Auto update (stopped)</button>
+      <div class="button-container">
+	<button id="manual_update" type="button" class="btn btn-primary">Manual update</button>
+	<button id="clear_marker" type="button" class="btn btn-primary">Clear Marker</button>
+	<button id="auto_update" type="button" class="btn btn-secondary">Auto update (stopped)</button>
+      </div>
 
       <div id="monitor">Monitor</div>
 
