show current position on mobile.html

--- a/ui/mobile.html
+++ b/ui/mobile.html
@@ -17,6 +17,10 @@
   <script type="text/javascript" src="js/mobile.js"></script>
   <link rel="stylesheet" href="css/mobile.css" />
 
+
+  <link rel="stylesheet" href="leaflet-icon-pluse/L.Icon.Pulse.css" />
+  <script src="leaflet-icon-pluse/L.Icon.Pulse.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 
