--- a/ui/mobile.html
+++ b/ui/mobile.html
@@ -16,6 +16,10 @@
   <link rel="stylesheet" href="leaflet-icon-pluse/L.Icon.Pulse.css" />
   <script src="leaflet-icon-pluse/L.Icon.Pulse.js"></script>
 
+  <link rel="stylesheet" href="easybutton/easy-button.css" />
+  <script src="easybutton/easy-button.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
   <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/mobile.js"></script>
   <link rel="stylesheet" href="css/mobile.css" />
