specify playback speed on UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -49,6 +49,11 @@
       <div class="input-group mb-3">
 	<button id="track_traces" type="button" class="btn btn-secondary">Track traces (stopped)</button>
 	<input id="starttime" type="text" class="form-control" placeholder="YYYY/MM/DD hh:mm:ss">
+
+	<div class="form-floating">
+	  <input class="form-control" id="playback_speed" placeholder="1">
+	  <label for="floatingInput">再生倍率</label>
+	</div>
       </div>
 
       <div id="monitor">Monitor</div>
