implemented playback mode. And gray out old traces.

--- a/ui/index.html
+++ b/ui/index.html
@@ -56,6 +56,16 @@
 	</div>
       </div>
 
+      <div class="input-group mb-3">
+	<button id="trace_playback" type="button" class="btn btn-secondary">Playback Trace (stopped)</button>
+	<input id="pb_starttime" type="text" class="form-control" placeholder="YYYY/MM/DD hh:mm:ss">
+
+	<div class="form-floating">
+	  <input class="form-control" id="pb_playback_speed" placeholder="1">
+	  <label for="floatingInput">再生倍率</label>
+	</div>
+      </div>
+
       <div id="monitor">Monitor</div>
 
       <p id="result"></p>
