change route on Onahama

--- a/ui/onhm.html
+++ b/ui/onhm.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="leaflet/leaflet.css" />
   <script src="leaflet/leaflet.js"></script>
 
+  <script type="text/javascript" src="js/leaflet.geometryutil.js"></script>
+  <script type="text/javascript" src="js/leaflet-arrowheads.js"></script>
+
   <script type="text/javascript" src="js/moment.js"></script>
   <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/map_onhm.js"></script>
@@ -35,9 +38,12 @@
 
     <div class="controller">
       <div class="button-container">
-	<button id="route1" type="button" class="btn btn-secondary">route1</button>
-	<button id="route2" type="button" class="btn btn-secondary">route2</button>
-	<button id="send_route" type="button" class="btn btn-primary">send route</button>
+	<button id="route1" type="button" class="btn btn-danger">route1</button>
+	<button id="route2" type="button" class="btn btn-danger">route2</button>
+	<button id="route3" type="button" class="btn btn-danger">route3</button>
+	<button id="route4" type="button" class="btn btn-danger">route4</button>
+	<button id="route5" type="button" class="btn btn-danger">route5</button>
+	<button id="route6" type="button" class="btn btn-danger">route6</button>
       </div>
 
       <div class="button-container">
