update arrows for the new map

--- a/ui/onhm.html
+++ b/ui/onhm.html
@@ -44,6 +44,7 @@
 	<button id="route4" type="button" class="btn btn-danger">route4</button>
 	<button id="route5" type="button" class="btn btn-danger">route5</button>
 	<button id="route6" type="button" class="btn btn-danger">route6</button>
+	<button id="route7" type="button" class="btn btn-danger">route7</button>
       </div>
 
       <div class="button-container">
