show the number of active users

--- a/ui/onhm.html
+++ b/ui/onhm.html
@@ -34,7 +34,12 @@
 
     </div><!-- /maparea -->
 
-
+    <div class="col-md-4 offset-md-8">
+      <div class="input-group mb-3">
+	<button type="button" class="btn btn-secondary"># Active Users</button>
+	<input id="active_user_num" type="text" class="form-control">
+      </div>
+    </div>
 
     <div class="controller">
       <div class="button-container">
