add line trace function

--- a/ui/onhm.html
+++ b/ui/onhm.html
@@ -78,6 +78,12 @@
 	</div>
       </div>
 
+      <div class="input-group mb-3">
+	<button id="line_playback" type="button" class="btn btn-secondary">Playback Line Trace (stopped)</button>
+      </div>
+
+
+
       <p id="result"></p>
 
     </div><!-- /controller -->
